update lisieux file

--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -58,6 +58,10 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-md-10 mx-auto">
+                        <p>Lisieux é a cidade do mosteiro do Carmelo onde a pequena Maria Francisca Teresa Martin floresceu como religiosa carmelita e se converteu na grande santa Teresa do Menino Jesus e da Santa Face. Além do Carmelo, Lisieux possui vários locais relacionados à vida desta santa carmelita, os mais importantes são: a casa onde passou sua infância após a morte de sua mãe (<em>Les Buissonnets</em>), a basílica dedicada à santa e a catedral de São Pedro.</p>
+                        <h2 class="section-heading">Como chegar?</h2>
+                        <p>Lisieux fica a uns 160 quilômetros do noroeste de Paris, na região da Normandia. Existe serviço diário de trem de Paris para Lisieux. O trem sai da estação <em>Saint Lazare</em>. A viagem tem uma duração aproximada de 1h40. Na época de minha viagem, comprei os boletos via o site da <a href="https://www.oui.sncf/">oui</a>. Paguei 30€ pelo boleto de ida e retorno. Procure chegar na plataforma de embarque com uns 20 minutos de antecedência para evitar qualquer transtorno.</p>
+                        <h2 class="section-heading">Sugestão de roteiro</h2>
                         <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
                         <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
                         <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
