--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -70,8 +70,20 @@
                         <p>O jardim da casa é também um lugar muito especial para se deter. Aqui você pode contemplar a estátua em mármore de Teresa junto a seu querido pai, um pequeno presépio construído por ela quando criança, além de poder imaginar a Teresa brincando no seu jardinzinho.</p>
                         <figure><img class="img-fluid" src="assets/img/jardim-1.jpg" alt="Jardim"/><figcaption>Foto: Joana/cherrypick</figcaption></figure>
                         <figure><img class="img-fluid" src="assets/img/altarzinho-1.jpg" alt="Altarzinho"/><figcaption>Foto: Joana/cherrypick</figcaption></figure>
-                        <h3>A Catedral de São Pedro</h3>
                         <p>É necessário ficar atento aos <a href="https://www.therese-de-lisieux.catholique.fr/en/opening-hours/" data-type="URL" data-id="https://www.therese-de-lisieux.catholique.fr/en/opening-hours/">horários</a> de visita, já que podem sofrer alterações dependendo da época do ano. A entrada é franca, mas se você puder deixar uma oferenda ou comprar um dos produtos, as irmãs agradecem já que esse dinheiro é utilizado para a manutenção de <em>Les Buissonnets</em>.</p>
+                        <h3>A Catedral de São Pedro</h3>
+                        <p>É nesta catedral que Teresa costumava participar das missas aos domingos e frequentemente durante semana com sua família. E foi na capela que fica perto do corredor norte, onde Frei Ducellier ouviu a primeira confissão de Teresa.&nbsp;</p>
+                        <h3>A Basílica</h3>
+                        <p>A Basílica, construída em honra a Santa Teresinha, também conhecido como o Santuário de Lisieux, possui uma região superior onde os peregrinos podem acompanhar as cerimônias que se realizam no santuário. Aqui é possível contemplar os belos mosaicos e se deixar envolver pelas cores formadas pela luz que atravessa as vidraças da Basílica. Em seguida, você pode descer à Cripta, que está coberta de mármore e de mosaicos que representam fases marcantes da vida de Santa Teresinha como, por exemplo, seu batismo na Igreja de Nossa Senhora de Alençon (4 de Janeiro de 1873); o milagre da cura pelas mãos da Virgem Santíssima na Festa de Pentecostes (13 de Maio de 1883); a primeira Eucaristia, que teve lugar na Abadia Beneditina de Lisieux (8 de Maio 1884); entre outros. Na Cripta é possível venerar a São Luís e Santa Zélia Martin, os pais de Santa Teresinha. Você pode fazer um momento de adoração e ação de graças na Capela do Santíssimo Sacramento.</p>
+                        <div class="row">
+                            <div class="column">
+                              <img class="img-fluid" src="assets/img/basilica1.jpg" alt="Basilica" style="width:100%">
+                            </div>
+                            <div class="column">
+                              <img class="img-fluid" src="assets/img/urnaPais.jpg" alt="Urna Santa Zelia & Luis Martin" style="width:100%">
+                            </div>
+                        </div> 
+
                         <p>Never in all their history have men been able truly to conceive of the world as one: a single sphere, a globe, having the qualities of a globe, a round earth in which all the directions eventually meet, in which there is no center because every point, or none, is center — an equal earth which all men occupy as equals. The airman's earth, if free men make it, will be truly round: a globe in practice, not in theory.</p>
                         <p>Science cuts two ways, of course; its products can be used for both good and evil. But there's no turning back from science. The early warnings about technological dangers also come from science.</p>
                         <p>What was most significant about the lunar voyage was not that man set foot on the Moon but that they set eye on the earth.</p>
