--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -1,5 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+    <style>
+        * {
+          box-sizing: border-box;
+        }
+        
+        .column {
+          float: left;
+          width: 33.33%;
+          padding: 5px;
+        }
+        
+        /* Clearfix (clear floats) */
+        .row::after {
+          content: "";
+          clear: both;
+          display: table;
+        }
+        </style>
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
