--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -133,6 +133,7 @@
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
+                                        <a rel="nofollow noopener noreferrer" href="https://jmalaverri.github.io/cherrypick/lisieux-cidade-de-santa-teresa-do-menino-jesus.html/?share=twitter&amp;nb=1" target="_blank"></a>
                                     </span>
                                 </a>
                             </li>
@@ -145,7 +146,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Copyright &copy; Your Website 2021</p>
+                        <p class="copyright text-muted">Todos os direitos reservados. A cópia do conteúdo desta página é proibida.Copyright &copy; Cherry Pick 2021- </p>
                     </div>
                 </div>
             </div>
