--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -129,11 +129,10 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
-                                    <span class="fa-stack fa-lg">
+                                <a rel="nofollow noopener noreferrer" href="https://littleperegrine.com/visitando-lisieux-a-cidade-de-santa-teresa-do-menino-jesus-e-da-santa-face/?share=twitter&amp;nb=1" target="_blank" title="Click to share on Twitter"><span>Twitter</span>
+                                    <span class="fa-stack fa-lg"><a href="#!"></a>
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
-                                        <a rel="nofollow noopener noreferrer" href="https://jmalaverri.github.io/cherrypick/lisieux-cidade-de-santa-teresa-do-menino-jesus.html/?share=twitter&amp;nb=1" target="_blank"></a>
                                     </span>
                                 </a>
                             </li>
@@ -146,7 +145,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Todos os direitos reservados. A cópia do conteúdo desta página é proibida.Copyright &copy; Cherry Pick 2021- </p>
+                        <p class="copyright text-muted">Todos os direitos reservados. A cópia do conteúdo desta página é proibida. Copyright &copy; Cherry Pick 2021- </p>
                     </div>
                 </div>
             </div>
