--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -129,7 +129,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a rel="nofollow noopener noreferrer" href="https://littleperegrine.com/visitando-lisieux-a-cidade-de-santa-teresa-do-menino-jesus-e-da-santa-face/?share=twitter&amp;nb=1" target="_blank" title="Click to share on Twitter"><span>Twitter</span>
+                                <a rel="nofollow noopener noreferrer" href="https://littleperegrine.com/visitando-lisieux-a-cidade-de-santa-teresa-do-menino-jesus-e-da-santa-face/?share=twitter&amp;nb=1" target="_blank">
                                     <span class="fa-stack fa-lg"><a href="#!"></a>
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
