--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -121,7 +121,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://www.facebook.com/sharer/sharer.php?u=https://littleperegrine.com/visitando-lisieux-a-cidade-de-santa-teresa-do-menino-jesus-e-da-santa-face">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -130,7 +130,7 @@
                             </li>
                             <li class="list-inline-item">
                                 <a href="#!">
-                                    <span class="fa-stack fa-lg"><a rel="nofollow noopener noreferrer" href="https://littleperegrine.com/visitando-lisieux-a-cidade-de-santa-teresa-do-menino-jesus-e-da-santa-face/?share=twitter&amp;nb=1"></a>
+                                    <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
                                     </span>
