--- a/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
+++ b/lisieux-cidade-de-santa-teresa-do-menino-jesus.html
@@ -121,7 +121,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io">
+                                <a href="https://facebook.com/sharer/sharer.php?u=http%3A%2F%2Fsharingbuttons.io" target="_blank" class="icon-twitter">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
