--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="http://www.twitter.com/share?url=#!" target="_blank" class="icon-twitter">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -121,7 +121,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://facebook.com/sharer/sharer.php?u=#!" target="_blank" class="icon-facebook">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -129,10 +129,10 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#!">
+                                <a href="https://reddit.com/submit?url=https://jmalaverri.github.io/cherrypick" target="_blank" class="icon-reddit">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
-                                        <i class="fab fa-github fa-stack-1x fa-inverse"></i>
+                                        <i class="fab fa-reddit fa-stack-1x fa-inverse"></i>
                                     </span>
                                 </a>
                             </li>
