--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <div class="site-heading">
                             <h1>Cherry Pick</h1>
-                            <span class="subheading">Viagens, dicas, livros e mais...</span>
+                            <span class="subheading">Partilhando experiências</span>
                         </div>
                     </div>
                 </div>
@@ -113,7 +113,7 @@
                     <div class="col-lg-8 col-md-10 mx-auto">
                         <ul class="list-inline text-center">
                             <li class="list-inline-item">
-                                <a href="http://www.twitter.com/share?url=#!" target="_blank" class="icon-twitter">
+                                <a href="http://www.twitter.com/share?url=https://jmalaverri.github.io/cherrypick" target="_blank" class="icon-twitter">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -121,7 +121,7 @@
                                 </a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="https://facebook.com/sharer/sharer.php?u=#!" target="_blank" class="icon-facebook">
+                                <a href="https://facebook.com/sharer/sharer.php?u=https://jmalaverri.github.io/cherrypick" target="_blank" class="icon-facebook">
                                     <span class="fa-stack fa-lg">
                                         <i class="fas fa-circle fa-stack-2x"></i>
                                         <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
