--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
                                 </a>
                             </li>
                         </ul>
-                        <p class="copyright text-muted">Copyright &copy; Your Website 2021</p>
+                        <p class="copyright text-muted">Todos os direitos reservados. A cópia do conteúdo desta página é proibida. Copyright &copy; Cherry Pick 2021- </p>
                     </div>
                 </div>
             </div>
